force-app/main/default/objects/Integration_Sync_Field__mdt/Integration_Sync_Field__mdt.object-meta.xml
<CustomObject>
    <label>Integration Sync Field</label>
    <pluralLabel>Integration Sync Fields</pluralLabel>
</CustomObject>