force-app/main/default/objects/Integration_Sync_Field__mdt/fields/Destination_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Destination_Field_Name__c</fullName>
    <label>Destination Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>