force-app/main/default/objects/Integration_Sync_Field__mdt/fields/Integration_Sync_Object__c.field-meta.xml
<CustomField>
    <fullName>Integration_Sync_Object__c</fullName>
    <label>Integration Sync Object</label>
    <referenceTo>Integration_Sync_Object__mdt</referenceTo>
    <relationshipLabel>Integration Sync Fields</relationshipLabel>
    <relationshipName>Integration_Sync_Fields</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>