force-app/main/default/objects/Integration_Sync_Field__mdt/fields/IsList__c.field-meta.xml
<CustomField>
    <fullName>IsList__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsList</label>
    <type>Checkbox</type>
</CustomField>