force-app/main/default/objects/Integration_Sync_Field__mdt/fields/Source_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Field_Name__c</fullName>
    <label>Source Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>